--- a/ferlog/package.json
+++ b/ferlog/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.0",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.20",
     "expo-font": "~13.0.2",
     "expo-linking": "~7.0.3",
@@ -31,8 +33,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
